# guetwifi

./: .gitignore  GuetWifiRunner.py  README.md  cli.py  main.py  pyproject.toml  requirements.txt  setup.py
guetwifi/: cli.py  guetwifirunner.py
