[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "guetwifi"
version = "0.1.4"
description = "GUET WiFi Monitor"
authors = ["PuQing <me@puqing.work>"]
license = "MIT"
homepage = "https://github.com/andPuQing/guetwifi"
repository = "https://github.com/andPuQing/guetwifi.git"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Networking",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.0"
psutil = "^5.7.2"
requests = "^2.23.0"

[tool.poetry.scripts]
guetwifi = "guetwifi.cli:main"
